<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="developer">Developer</string>
    <string name="next">Skip</string>
    <string name="instruction_0">once you read this onboarding screen you dont see it again if you are logged in.</string>
    <string name="instruction_1">press next / skip</string>
    <string name="shoe_name">name</string>
    <string name="save">save</string>
    <string name="shoe_size">size</string>
    <string name="description">description</string>
    <string name="company">company</string>
    <string name="logout">Logout</string>
</resources>
